--- a/index.html
+++ b/index.html
@@ -43,11 +43,14 @@
         <hr>
         <h2><i>Olá, sou o João Pedro!</i></h2>
 
-        <p>Olá! Meu nome é <b>João Pedro</b> e curto muito programação e tecnologia, <b>principalmente no desenvolvimento
-            back-end.</b> <br>
-            Gosto de trabalhar com <u>JavaScript, Python e MongoDB,</u> criando soluções eficientes e bem estruturadas.</p>
+        <p>Olá! Meu nome é <b>João Pedro</b> e curto muito programação e tecnologia, <b>principalmente no
+                desenvolvimento
+                back-end.</b> <br>
+            Gosto de trabalhar com <u>JavaScript, Python e MongoDB,</u> criando soluções eficientes e bem estruturadas.
+        </p>
 
-        <p>Meu dia se resume a programar, <b><u>CLTzada</u></b> e jogar. <br> Eu tambem, pretendo expandir meus conhecimentos para outras
+        <p>Meu dia se resume a programar, <b><u>CLTzada</u></b> e jogar. <br> Eu tambem, pretendo expandir meus
+            conhecimentos para outras
             linguagens orientadas a objetos, como <i><u>C# e Java.</u></i></p>
     </fieldset>
 
@@ -133,7 +136,7 @@
                 <tr>
                     <td>Programação<br>Front-End</td>
                     <td>JavaScript</td>
-                    <td>Intermediário</td>
+                    <td>Avançado</td>
 
                 </tr>
                 <tr>
@@ -160,7 +163,7 @@
                 </tr>
                 <tr>
                     <td>Português</td>
-                    <td>Baixo</td>
+                    <td>Básico</td>
                 </tr>
             </tbody>
         </table>
@@ -236,19 +239,26 @@
     <fieldset id="socialEprojetos">
         <h3>Redes Sociais e Projetos</h3>
         <p>Você pode me encontrar nas redes sociais ou conferir meus projetos em:</p>
-        <ul>
-            <li type="circle">
-                <a href="https://www.linkedin.com/in/joao-pedro-428b43271/" target="_blank">LinkedIn</a>
-            </li>
 
-            <li type="circle">
-                <a href="https://github.com/JoaoPedrinho013" target="_blank">Github</a>
-            </li>
-        </ul>
+        <p>
+            <a href="https://www.linkedin.com/in/joao-pedro-428b43271/" target="_blank">
+                <img src="images/linkedin.jpg" width="20" alt="LinkedIn"> LinkedIn
+            </a>
+        </p>
+
+        <p>
+            <a href="https://github.com/JoaoPedrinho013" target="_blank">
+                <img src="images/github.jpg" width="20" alt="GitHub"> GitHub
+            </a>
+        </p>
+
+
+
+
     </fieldset>
 
     <br><br>
-    
+
     <p><a href="#inicio">Voltar ao Topo</a> &#8593;</p>
     <p>FatecPG WEB I &copy; João Pedro </p>
 
